kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genioacademy-ingress
  annotations:
    # cert-manager solicitará y renovará el certificado SSL de Let's Encrypt automáticamente
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # Traefik es el ingress controller que viene incluido en K3s
  ingressClassName: traefik
  tls:
    - hosts:
        - cristina2daw.es
        - www.cristina2daw.es
        - api.cristina2daw.es
      secretName: genioacademy-tls
  rules:
    # ── DOMINIO PRINCIPAL (FRONTEND) ──
    - host: cristina2daw.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: www.cristina2daw.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    # ── SUBDOMINIO API (BACKEND) ──
    - host: api.cristina2daw.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
